src/objects/CD_Items__c.object
<CustomObject>
    <fields>
        <fullName>APC_Description__c</fullName>
        <label>APC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APC_IOD_IN__c</fullName>
        <label>APC IOD IN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_APC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD APC</label>
        <referenceTo>CD_APC__c</referenceTo>
        <relationshipLabel>CD Items</relationshipLabel>
        <relationshipName>CD_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_Cost_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required as per discussion in the past. If  at all required, review the changes required.</description>
        <label>CD Cost Category</label>
        <referenceTo>CD_Cost_Category__c</referenceTo>
        <relationshipLabel>CD Items</relationshipLabel>
        <relationshipName>CD_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Category_IOD_OUT__c</fullName>
        <formula>CD_Cost_Category__r.Name</formula>
        <label>Cost Category IOD OUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Type</label>
        <referenceTo>CD_Item_Categories__c</referenceTo>
        <relationshipLabel>CD Items</relationshipLabel>
        <relationshipName>CD_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CD Items</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CD Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>